samples/_failures_safe/1761721765_35ab5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b1f153a3.c: In function ‘main’:
./samples/SAFE/__tmp_b1f153a3.c:133:50: error: expected ‘]’ at end of input
  133 |             entry->level[sizeof(entry->level) - 1
      |                                                  ^
      |                                                  ]
./samples/SAFE/__tmp_b1f153a3.c:133:13: error: expected declaration or statement at end of input
  133 |             entry->level[sizeof(entry->level) - 1
      |             ^~~~~
./samples/SAFE/__tmp_b1f153a3.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b1f153a3.c:133:13: error: expected declaration or statement at end of input
